# highlighter_capabilities

./: .gitignore  pyproject.toml
src/highlighter_capabilities/: __init__.py  logging.py  sources.py  targets.py
src/highlighter_capabilities/toy_examples/: __init__.py  image_norm_detector.py  image_size_detector.py
tests/: conftest.py  test_agent_run.py
